--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,87 @@
-
-
-.centralizado {
-    text-align: center; 
-    vertical-align: middle; 
+body {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100vh;
+  overflow-x: hidden;
+  display: flex;
+  justify-content: center;
 }
 
-.lateral {
-    float: left; 
-    position: relative; 
+#logo{
+    position: absolute;
+    top: 20px;
+    left: 40px;
+    z-index: 3;
+    width: 200px;
 }
 
-.transparente {
-    opacity: 0.5; 
+#background-img {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
-img {
-    width: 100px; 
-    height: 75px;
+#background-img::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('/assets/background.jpg');
+  z-index: 1;
+}
+
+#overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Cor preta com opacidade (0.5) */
+  z-index: 2;
+}
+
+/* #container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+    color: #fff; 
+  } */
+
+#form-container{
+    position: absolute;
+    top: 100px;
+    width: 350px;
+    height: 560px;
+    background-color: #000000;
+    opacity:80%;
+    z-index: 3;
+    border-radius: 8px;
+    padding: 32px 60px;
+
+}
+
+#title{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    font-weight: 600;
+    color: #fff;
+}
+
+.site-footer-wrapper{
+  position: absolute;
+  width: 100%;
+  background-color: #000000;
+  opacity: 100%;
+  top: 100%;
 }
