--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* Estilos gerais do body */
 body {
   font-family: Arial, Helvetica, sans-serif;
   position: relative;
@@ -8,27 +9,23 @@ body {
   overflow-x: hidden;
   display: flex;
   justify-content: center;
-  background-image: url('./assets/background.jpg');
 }
 
-#logo{
-    position: absolute;
-    top: 25px;
-    left: 3%;
-    z-index: 3;
-    width: 167px;
-    height: 45px;
-}
-
-
-#background-img::before {
-  content: "";
+/* Estilos do logotipo */
+#logo {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url('/assets/background.jpg');
+  top: 25px;
+  left: 3%;
+  z-index: 3;
+  width: 167px;
+  height: 45px;
+  z-index: 3;
+}
+
+#background-img {
+  position: absolute;
+  width: auto;
+  height: auto;
   z-index: 1;
 }
 
@@ -41,6 +38,7 @@ body {
   background-color: rgba(0, 0, 0, 0.5); /* Cor preta com opacidade (0.5) */
   z-index: 2;
 }
+
 
 /* #container {
     position: absolute;
@@ -206,9 +204,10 @@ input:valid + label {
   width: 100%;
   height: 270px;
   background-color: rgba(0, 0, 0, 0.5);
-  padding-top: 100px;
   top: 100%;
+  padding-top: 150px;
   overflow: hidden;
+  z-index: 3;
 }
 
 .footer{
