--- a/styles.css
+++ b/styles.css
@@ -204,6 +204,7 @@ input:valid + label {
   width: 100%;
   height: 270px;
   background-color: rgba(0, 0, 0, 0.5);
+  color: #737373;
   top: 100%;
   padding-top: 150px;
   overflow: hidden;
@@ -213,5 +214,74 @@ input:valid + label {
 .footer{
   background-color: rgba(0, 0, 0, 0.75);
   height: 100%;
+  padding: 30px 210px;
 }
 
+.title-footer{
+  font-size: 16px;
+}
+
+.number{
+  font-size: 16px;
+  color: #737373;
+  text-decoration: none;
+}
+
+.number:hover{
+  text-decoration: underline;
+}
+
+.a-container{
+  display: flex;
+  justify-content: space-between;
+  height: 65px;
+}
+.a-column{
+  display: flex;
+  flex-direction: column;
+  margin-right: auto;
+}
+.a-footer{
+  font-size: 13px;
+  color: #737373;
+  text-decoration: none;
+  margin-bottom: 16px;
+}
+
+a:hover{
+  text-decoration: underline;
+} /* Estilo para o container do dropdown */
+
+.dropdown {
+    display: flex;
+    margin-top: 20px;
+    background-color: black;
+    align-items: center;
+    justify-content: center;
+    width: 120px;
+    padding: 16px;
+    border: 1px solid #333;
+    border-radius: 4px;
+}
+
+.icon-global{
+  height: 24px;
+  width: 24px;
+  color: #fff;
+  filter: brightness(8);
+}
+
+.dropdown-button {
+    background-color: black;
+    color: #737373;
+    border: none;
+    cursor: pointer;
+    margin-left: 12px;
+}
+
+.icon-arrow-bottom{
+  width: 13px;
+  height: 15px;
+  margin-bottom: 6px;
+  filter:  invert(1) opacity(0.5);
+}
