--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* Estilos gerais do body */
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   position: relative;
@@ -11,7 +11,6 @@ body {
   justify-content: center;
 }
 
-/* Estilos do logotipo */
 #logo {
   position: absolute;
   top: 25px;
@@ -35,24 +34,9 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Cor preta com opacidade (0.5) */
+  background-color: rgba(0, 0, 0, 0.5); 
   z-index: 2;
 }
-
-
-/* #container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #000000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 2;
-    color: #fff; 
-  } */
 
 #form-container{
     position: absolute;
@@ -250,7 +234,7 @@ input:valid + label {
 
 a:hover{
   text-decoration: underline;
-} /* Estilo para o container do dropdown */
+} 
 
 .dropdown {
     display: flex;
